<resources>
    <string name="app_name">QALight</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="slogan">Light up your life!</string>
    <string name="hint">Your code</string>
    <string name="wrong_code">It seems to be a wrong code!</string>
    <string name="correct_code">Congratulations!</string>
    <string name="navigate_to_main_activity">Confirm</string>
    <string name = "navigate_to_motivations"> more </string>

    <string name="txt_credits"><a href="http://qalight.com.ua/#two">I\'m not a student</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="materials_and_test"><![CDATA[Materials & test]]></string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="motivation">Motivation</string>
    <string name="exit">Exit</string>
    <string name="home_task">Home Task</string>
    <string name="materials">Materials</string>
    <string name="tests">Tests</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="about_us">About us</string>
    <string name="loading">Loading</string>
    <!--       From this point translate new strings!              -->
    <string name="internet_connection_failed">It seems your internet connection is failed</string>
    <string name="connection_problems">Connection problems. Make another try later</string>
    <string name="hello">Hello</string>
    <string name="group">from group</string>

</resources>
