<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_insert_invitation_black_24dp"
            android:iconTint="#FF222C6E"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/nav_materials_and_tests"
            android:icon="@drawable/ic_picture_as_pdf_black_24dp"
            android:title="@string/materials_and_test" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:iconTint="#f92020"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:iconTint="#23ba2f"
            android:title="@string/payment"/>
        <item
            android:id="@+id/nav_motivation"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/motivation"/>
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/exit" />
    </group>

</menu>
