<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.qalightandroidapp.activities.LoginActivity">


    <ImageView
        android:id="@+id/imageViewWithLogo"
        android:layout_width="342dp"
        android:layout_height="165dp"
        android:layout_marginTop="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:srcCompat="@drawable/logo_for_registration"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewWithLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        android:layout_alignBottom="@+id/imageViewWithLogo"
        android:layout_centerHorizontal="true" />

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/loginCodeEditText"
        android:layout_width="250dp"
        android:layout_height="90dp"
        app:enabled="true"
        app:errorColor="@color/colorRed"
        app:helperTextColor="#795548"
        app:hint="@string/hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxCharacters="10"
        app:panelBackgroundColor="#00ffffff"
        app:primaryColor="@color/colorOrange"
        app:singleLine="true"
        android:layout_below="@+id/imageViewWithLogo"
        android:layout_centerHorizontal="true" />



    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_credits"
        android:id="@+id/txt_credits"
        android:textAlignment="center"
        android:textColorLink="@color/colorGray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCodeEditText"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/personalCabButtonOnLogin"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:background="@color/colorHoloGreen"
        android:text="@string/navigate_to_main_activity"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/loginCodeEditText"
        android:layout_centerHorizontal="true" />

    <com.spark.submitbutton.SubmitButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/navigate_to_main_activity"
        android:textColor="@color/gray"
        android:layout_marginTop="-10dp"
        app:sub_btn_background="@color/white"
        app:sub_btn_duration="800"
        app:sub_btn_line_color="@color/colorHoloGreen"
        app:sub_btn_ripple_color="@color/colorGreen"
        app:sub_btn_tick_color="@color/white"
        android:layout_below="@+id/loginCodeEditText"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>


</RelativeLayout>
